# dexter

./: .gitignore  CLAUDE.md  CODE-REVIEW.md  MULTI_OS_MIGRATION_PLAN.md  README.md  TODO.md  package-lock.json  package.json  system-prompt.md  tailwind.config.js
docs/: ARCHITECTURE-REFACTOR-PLAN.md  AUTOMATION-API-PLAN.md  PHASE1-PLAN.md  TOOL-CALLING-STRATEGY.md  VISION.md
scripts/: chatterbox-openai-server.py  dev-linux.sh  piper-openai-server.py  run-chatterbox.sh  run-linux.sh  setup-chatterbox.sh
src/: App.css  App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_draft.rs  agent_session.rs  automation.rs  backend.rs  command_parser.rs  commands.rs  config.rs  conversation.rs  dialog_manager.rs  dictation.rs  hands_free.rs  lib.rs  main.rs  panel_manager.rs  pipeline.rs  rag.rs  sandbox.rs  state.rs  tool_executor.rs  tools.rs  voice.rs  window.rs
src-tauri/src/voice/: audio.rs  mod.rs  stt.rs  tool_defs.rs  tts.rs
src-tauri/src/voice/llm/: mod.rs  ollama.rs  openai.rs
src/agent-draft/: AgentDraft.tsx
src/automation/: console.ts
src/components/: ModelSelect.tsx  ui.tsx
src/orb/: Bubble.tsx  DictationBuffer.tsx  ModeBar.tsx  Orb.tsx  StatsBar.tsx
src/panel/: Panel.tsx
src/settings/: ConfigTab.tsx  KnowledgeTab.tsx  PromptTab.tsx  Settings.tsx  ToolsTab.tsx
tests/e2e/: smoke_automation.py
tests/e2e/lib/: api.py
tests/tool_calling/: eval.py  scenarios.json
