[package]
name = "voice-assistant"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "voice_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-global-shortcut = "2.3.1"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
tokio-stream = "0.1"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tauri-plugin-autostart = "2.5.1"
cpal = "0.15"
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
regex = "1"
tokio-util = { version = "0.7", features = ["rt"] }

[target.'cfg(target_os = "linux")'.dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
